[gd_scene load_steps=15 format=3 uid="uid://c18tp76idhudy"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_htgsc"]
[ext_resource type="Script" path="res://Scripts/States/state_machine.gd" id="2_hl7ng"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/default_state.gd" id="5_4n6ui"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/free_camera_state.gd" id="6_84eqe"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/inactive_state.gd" id="6_472j7"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/inventory_state.gd" id="6_fqmj7"]
[ext_resource type="PackedScene" uid="uid://b4hd1ndtfhxn8" path="res://Scenes/UI/HUD.tscn" id="8_2rkre"]
[ext_resource type="Script" path="res://Scripts/States/PlayerStates/crouch_state.gd" id="8_cftrw"]
[ext_resource type="PackedScene" uid="uid://buaqqfsu5v4ep" path="res://Scenes/Components/HealthComponent.tscn" id="11_dbfjr"]
[ext_resource type="PackedScene" uid="uid://d2bl8obos13fc" path="res://Scenes/UI/CommandLine.tscn" id="12_0cbko"]
[ext_resource type="PackedScene" uid="uid://dgvi23umdq4y8" path="res://Scenes/Components/ManaComponent.tscn" id="12_o6niw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_opc8m"]
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rnoxv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vi20c"]
radius = 0.005

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_htgsc")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_opc8m")
disabled = true

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rnoxv")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="HeadHitbox" type="Area3D" parent="Head"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/HeadHitbox"]
shape = SubResource("SphereShape3D_vi20c")

[node name="Camera" type="Camera3D" parent="Head"]

[node name="InteractionRayCast" type="RayCast3D" parent="Head/Camera"]
target_position = Vector3(0, 0, -3)

[node name="ItemRayCast" type="RayCast3D" parent="Head/Camera"]
target_position = Vector3(0, 0, -10)

[node name="Items" type="Node3D" parent="Head"]
transform = Transform3D(0.241482, 0.0247614, -0.0597795, -0.00157975, 0.233157, 0.0901956, 0.0646856, -0.0867443, 0.225369, 0.909801, -0.6, -0.7)
visible = false

[node name="Item1" type="Node3D" parent="Head/Items"]
transform = Transform3D(0.104337, -0.465283, 0.87899, 0.679389, 0.678804, 0.278673, -0.726324, 0.5681, 0.386931, -3.55944, 1.39504, 2.25978)
visible = false

[node name="Item2" type="Node3D" parent="Head/Items"]
transform = Transform3D(0.104337, -0.465283, 0.87899, 0.679389, 0.678804, 0.278673, -0.726324, 0.5681, 0.386931, -3.55944, 1.39504, 2.25978)
visible = false

[node name="Item3" type="Node3D" parent="Head/Items"]
transform = Transform3D(0.104337, -0.465283, 0.87899, 0.679389, 0.678804, 0.278673, -0.726324, 0.5681, 0.386931, -3.55944, 1.39504, 2.25978)
visible = false

[node name="Item4" type="Node3D" parent="Head/Items"]
transform = Transform3D(0.104337, -0.465283, 0.87899, 0.679389, 0.678804, 0.278673, -0.726324, 0.5681, 0.386931, -3.55944, 1.39504, 2.25978)
visible = false

[node name="Item5" type="Node3D" parent="Head/Items"]
transform = Transform3D(0.104337, -0.465283, 0.87899, 0.679389, 0.678804, 0.278673, -0.726324, 0.5681, 0.386931, -3.55944, 1.39504, 2.25978)
visible = false

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_hl7ng")
initial_state = NodePath("DefaultState")

[node name="DefaultState" type="Node" parent="StateMachine"]
script = ExtResource("5_4n6ui")

[node name="InventoryState" type="Node" parent="StateMachine"]
script = ExtResource("6_fqmj7")

[node name="InactiveState" type="Node" parent="StateMachine"]
script = ExtResource("6_472j7")

[node name="FreeCameraState" type="Node" parent="StateMachine"]
script = ExtResource("6_84eqe")

[node name="CrouchState" type="Node" parent="StateMachine"]
script = ExtResource("8_cftrw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("8_2rkre")]
top_level = true
mouse_filter = 1

[node name="CommandLine" parent="CanvasLayer" instance=ExtResource("12_0cbko")]
visible = false

[node name="Timers" type="Node" parent="."]

[node name="JumpBuffer" type="Timer" parent="Timers"]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="RayCasts" type="Node3D" parent="."]

[node name="CrouchingRayCast" type="RayCast3D" parent="RayCasts"]
target_position = Vector3(0, 2, 0)

[node name="FloorRayCast" type="RayCast3D" parent="RayCasts"]
target_position = Vector3(0, -5, 0)

[node name="Components" type="Node3D" parent="."]

[node name="HealthComponent" parent="Components" instance=ExtResource("11_dbfjr")]

[node name="ManaComponent" parent="Components" instance=ExtResource("12_o6niw")]

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
visible = false
size = Vector3(25, 10, 25)
